@@ -14,14 +14,7 @@ struct std::formatter<std::vector<std::byte>> : std::formatter<std::string>
 {
    auto format(const std::vector<std::byte>& data, std::format_context& ctx)
    {
-      std::string result;
-      result.reserve(data.size());
-
-      for (auto byte : data)
-      {
-         result += static_cast<unsigned char>(byte);
-      }
-
+      std::string result{ reinterpret_cast<const char*>(data.data()), data.size() };
       return std::formatter<std::string>::format(result, ctx);
    }
 };
